--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
     "@mui/core": "^5.0.0-alpha.54",
-    "@mui/icons-material": "^5.11.16",
+    "@mui/icons-material": "^5.14.3",
     "@mui/joy": "^5.0.0-alpha.84",
-    "@mui/material": "^5.13.3",
+    "@mui/material": "^5.14.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -20,9 +20,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+
     "react-swipeable-views": "^0.14.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.4.2",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
     "@types/react-slick": "^0.23.10",
     "@types/react-swipeable-views-utils": "^0.13.4"
   }
