--- a/package.json
+++ b/package.json
@@ -6,17 +6,12 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
-    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.14.3",
     "@mui/joy": "^5.0.0-alpha.84",
     "@mui/material": "^5.14.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,8 +24,8 @@
     "react-swipeable-views": "^0.14.0",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "typescript": "^5.0.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "react-scripts start --open",
@@ -57,8 +52,14 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@types/react-scroll": "^1.8.7",
     "@types/react-slick": "^0.23.10",
     "@types/react-swipeable-views-utils": "^0.13.4"
+  },
+  "resolutions": {
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4"
   }
 }
