--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "protifolio_react",
+  "name": "protifolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.14.3",
-    "@mui/joy": "^5.0.0-alpha.84",
     "@mui/material": "^5.14.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,20 +17,16 @@
     "react-i18next": "^13.2.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
-    "react-slick": "^0.29.0",
-    "react-swipeable-views": "^0.14.0",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^5.0.4",
-    "web-vitals": "^2.1.4"
+    "vite": "^7.0.4"
   },
   "scripts": {
-    "dev": "react-scripts start --open",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -52,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.7",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.2.4",
     "@types/react-scroll": "^1.8.7",
     "@types/react-slick": "^0.23.10",
