--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.30.3",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^5.0.4",
